Recreated geojson file for public art to fix issue of Artist names not appearing.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         map.on('load', function () {
             map.addSource('publicArt', {
                 type: 'geojson',
-                data: 'joined_public_art.geojson'
+                data: 'join_public_art.geojson'
             });
 
             map.addLayer({
