--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
         });
         // Add popups
         map.on('click', 'artLocations', function (e) {
-            console.log(e.features[0].properties.artistname);  // Log the artist name
-            // Rest of the click event code...
             var coordinates = e.features[0].geometry.coordinates.slice();
             var title = e.features[0].properties.title_of_work;
-            var artist = e.features[0].properties.artistname;  // Access the artistname property
+            var artist = e.features[0].properties.ArtistInfo;
             var year = e.features[0].properties.yearofinstallation;
 
             new mapboxgl.Popup()
