--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             new mapboxgl.Popup()
                 .setLngLat(coordinates)
-                .setHTML(`<strong>${title}</strong><br>Artist: ${artist}<br>Year: ${year}`)
+                .setHTML(`<strong>${title}</strong><br>Artist Information: ${artist}<br>Year: ${year}`)
                 .addTo(map);
         });
 
