--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
             new mapboxgl.Popup()
                 .setLngLat(coordinates)
-                .setHTML(`<strong>${title}</strong><br>Artist: ${artistNames}<br>Year: ${year}`)
+                .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames}<br>Year: ${year}`)
                 .addTo(map);
-            });
+        });
 
     });
 
