--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="map" style="width: 100%; height: 600px;"></div>
 <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
-    var map = new mapboxgl.Map({
+    const map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
         center: [-123.1207, 49.2827], // Longitude, latitude of Vancouver
@@ -36,11 +36,11 @@
         });
         // Add popups
         map.on('click', 'artLocations', function (e) {
-            var coordinates = e.features[0].geometry.coordinates.slice();
-            var title = e.features[0].properties.title_of_work;
-            var artistInfo = e.features[0].properties.ArtistInfo;
-            var artistNames = artistInfo.map(artist => artist.artistname).join(', ');
-            var year = e.features[0].properties.yearofinstallation;
+            const coordinates = e.features[0].geometry.coordinates.slice();
+            const title = e.features[0].properties.title_of_work;
+            const artistInfo = e.features[0].properties.ArtistInfo;
+            const artistNames = artistInfo.map(artist => artist.artistname).join(', ');
+            const year = e.features[0].properties.yearofinstallation;
 
             new mapboxgl.Popup()
                 .setLngLat(coordinates)
