--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vancouver Public Art Map</title>
-<link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vancouver Public Art Map</title>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="map" style="width: 100%; height: 600px;"></div>
-<script>
+  <div id="map" style="width: 100%; height: 600px;"></div>
+  <script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
     const map = new mapboxgl.Map({
         container: 'map',
@@ -22,7 +22,7 @@
     map.on('load', function () {
         map.addSource('publicArt', {
             type: 'geojson',
-            data: 'public_art.geojson'
+            data: 'public-art.geojson' // Corrected file name
         });
 
         map.addLayer({
@@ -34,6 +34,7 @@
                 'circle-color': '#B42222'
             }
         });
+
         // Add popups
         map.on('click', 'artLocations', function (e) {
             const coordinates = e.features[0].geometry.coordinates.slice();
@@ -47,18 +48,16 @@
                 .addTo(map);
         });
 
-    });
+        // Change the cursor to a pointer when the mouse is over the artLocations layer
+        map.on('mouseenter', 'artLocations', function () {
+            map.getCanvas().style.cursor = 'pointer';
+        });
 
-    // Change the cursor to a pointer when the mouse is over the artLocations layer
-    map.on('mouseenter', 'artLocations', function () {
-        map.getCanvas().style.cursor = 'pointer';
+        // Change it back to a pointer when it leaves
+        map.on('mouseleave', 'artLocations', function () {
+            map.getCanvas().style.cursor = '';
+        });
     });
-
-    // Change it back to a pointer when it leaves
-    map.on('mouseleave', 'artLocations', function () {
-        map.getCanvas().style.cursor = '';
-    });
-
-</script>
+  </script>
 </body>
 </html>
