--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         map.on('click', 'artLocations', function (e) {
             const coordinates = e.features[0].geometry.coordinates.slice();
             const title = e.features[0].properties.title_of_work;
-            const filename = e.features[0].properties.filename;
+            const filename = e.features[0].properties.photourl.filename; // Corrected property access
             const year = e.features[0].properties.yearofinstallation;
 
             new mapboxgl.Popup()
@@ -47,6 +47,7 @@
                 .setHTML(`<strong>${title}</strong><br>Art Info: ${filename}<br>Year: ${year}`)
                 .addTo(map);
         });
+
 
         // Change the cursor to a pointer when the mouse is over the artLocations layer
         map.on('mouseenter', 'artLocations', function () {
