--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         map.on('click', 'artLocations', function (e) {
             const coordinates = e.features[0].geometry.coordinates.slice();
             const title = e.features[0].properties.title_of_work;
-            const artistname = e.features[0].properties.photourl.ArtistNames; // Corrected property access
+            const artistname = e.features[0].properties.ArtistNames; // Corrected property access
             const year = e.features[0].properties.yearofinstallation;
 
             new mapboxgl.Popup()
                 .setLngLat(coordinates)
-                .setHTML(`<strong>${title}</strong><br>Art Info: ${filename}<br>Year: ${year}`)
+                .setHTML(`<strong>${title}</strong><br>Art Info: ${artistname}<br>Year: ${year}`)
                 .addTo(map);
         });
 
