--- a/index.html
+++ b/index.html
@@ -39,18 +39,22 @@
         map.on('click', 'artLocations', function (e) {
             const coordinates = e.features[0].geometry.coordinates.slice();
             const title = e.features[0].properties.title_of_work;
-            const artistname = e.features[0].properties.ArtistNames; // Corrected property access
+            const artistNames = e.features[0].properties.ArtistNames || [];
             const year = e.features[0].properties.yearofinstallation;
-            const projectStatement = e.features[0].properties.artistprojectstatement || 'N/A'; // Handle possible 'None'
-            const description = e.features[0].properties.descriptionofwork || 'N/A'; // Handle possible 'None'
-            const photoCredits = e.features[0].properties.photocredits || 'N/A'; // Handle possible 'None'
+            const projectStatement = e.features[0].properties.artistprojectstatement || 'N/A';
+            const description = e.features[0].properties.descriptionofwork || 'N/A';
+            const photoCredits = e.features[0].properties.photocredits || 'N/A';
 
-        new mapboxgl.Popup()
-            .setLngLat(coordinates)
-            .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames.filter(name => name !== 'None').join(', ')}<br>Year: ${year}<br>Project Statement: ${projectStatement}<br>Description: ${description}<br>Photocredits: ${photoCredits}<br>`)
-            .addTo(map);
+            // Remove existing popups before opening a new one
+            if (map.getPopup()) {
+                map.getPopup().remove();
+            }
+
+            new mapboxgl.Popup()
+                .setLngLat(coordinates)
+                .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames.filter(name => name !== 'None').join(', ')}<br>Year: ${year}<br>Project Statement: ${projectStatement}<br>Description: ${description}<br>Photocredits: ${photoCredits}<br>`)
+                .addTo(map);
         });
-
 
         // Change the cursor to a pointer when the mouse is over the artLocations layer
         map.on('mouseenter', 'artLocations', function () {
@@ -60,6 +64,13 @@
         // Change it back to a pointer when it leaves
         map.on('mouseleave', 'artLocations', function () {
             map.getCanvas().style.cursor = '';
+        });
+
+        // Close the popup on map click
+        map.on('click', function () {
+            if (map.getPopup()) {
+                map.getPopup().remove();
+            }
         });
     });
   </script>
