--- a/index.html
+++ b/index.html
@@ -35,45 +35,47 @@
             }
         });
 
-// Add popups
-map.on('click', 'publicArt', function (e) {
-    const coordinates = e.features[0].geometry.coordinates.slice();
-    const title = e.features[0].properties.title_of_work;
-    const artistNames = e.features[0].properties.ArtistNames || [];
-    const year = e.features[0].properties.yearofinstallation;
-    const projectStatement = e.features[0].properties.artistprojectstatement || 'N/A';
-    const description = e.features[0].properties.descriptionofwork || 'N/A';
-    const photoCredits = e.features[0].properties.photocredits || 'N/A';
+        // Initialize a variable to store the popup
+        let popup;
 
-    // Remove existing popups before opening a new one
-    if (map.getPopup()) {
-        map.getPopup().remove();
-    }
+        // Add popups
+        map.on('click', 'publicArt', function (e) {
+            const coordinates = e.features[0].geometry.coordinates.slice();
+            const title = e.features[0].properties.title_of_work;
+            const artistNames = e.features[0].properties.ArtistNames || [];
+            const year = e.features[0].properties.yearofinstallation;
+            const projectStatement = e.features[0].properties.artistprojectstatement || 'N/A';
+            const description = e.features[0].properties.descriptionofwork || 'N/A';
+            const photoCredits = e.features[0].properties.photocredits || 'N/A';
 
-    new mapboxgl.Popup()
-        .setLngLat(coordinates)
-        .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames.filter(name => name !== 'None').join(', ')}<br>Year: ${year}<br>Project Statement: ${projectStatement}<br>Description: ${description}<br>Photocredits: ${photoCredits}<br>`)
-        .addTo(map);
-});
+            // Close existing popup if it exists
+            if (popup) {
+                popup.remove();
+            }
 
-// Change the cursor to a pointer when the mouse is over the publicArt layer
-map.on('mouseenter', 'publicArt', function () {
-    map.getCanvas().style.cursor = 'pointer';
-});
+            // Create a new popup
+            popup = new mapboxgl.Popup()
+                .setLngLat(coordinates)
+                .setHTML(`<strong>${title}</strong><br>Artists: ${artistNames.filter(name => name !== 'None').join(', ')}<br>Year: ${year}<br>Project Statement: ${projectStatement}<br>Description: ${description}<br>Photocredits: ${photoCredits}<br>`)
+                .addTo(map);
+        });
 
-// Reset the cursor when it leaves the publicArt layer
-map.on('mouseleave', 'publicArt', function () {
-    map.getCanvas().style.cursor = '';
-});
+        // Change the cursor to a pointer when the mouse is over the publicArt layer
+        map.on('mouseenter', 'publicArt', function () {
+            map.getCanvas().style.cursor = 'pointer';
+        });
 
-// Close the popup on map click
-map.on('click', function () {
-    if (map.getPopup()) {
-        map.getPopup().remove();
-    }
-});
+        // Reset the cursor when it leaves the publicArt layer
+        map.on('mouseleave', 'publicArt', function () {
+            map.getCanvas().style.cursor = '';
+        });
 
-
+        // Close the popup on map click
+        map.on('click', function () {
+            if (popup) {
+                popup.remove();
+            }
+        });
     });
   </script>
 </body>
