--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,7 +7,7 @@
   <title>Vancouver Public Art Map</title>
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
   <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
-  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div id="map" style="width: 100%; height: 600px;"></div>
@@ -22,7 +23,7 @@
     map.on('load', function () {
         map.addSource('publicArt', {
             type: 'geojson',
-            data: 'join_public_art.geojson' // Corrected file name
+            data: 'joined_public_art.geojson' // Corrected file name
         });
 
         map.addLayer({
