--- a/index.html
+++ b/index.html
@@ -78,15 +78,11 @@
         });
 
         function formatArtists(artistNames) {
-            if (!artistNames || artistNames === 'None') {
+            if (!artistNames || artistNames.toLowerCase() === 'none') {
                 return 'N/A';
             }
 
-            if (Array.isArray(artistNames)) {
-                return artistNames.filter(name => name !== 'None').join(', ');
-            }
-
-            return artistNames;
+            return artistNames.replace(/(\[|\])/g, ''); // Remove brackets
         }
     </script>
 </body>
