--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
 
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,6 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
 </head>
-
 <body>
     <div id="map" style="width: 100%; height: 600px;"></div>
     <script>
@@ -19,8 +18,6 @@
             center: [-123.1207, 49.2827], // Longitude, latitude of Vancouver
             zoom: 10
         });
-
-        let popup; // Declare popup outside the event listeners
 
         map.on('load', function () {
             map.addSource('publicArt', {
@@ -38,40 +35,19 @@
                 }
             });
 
-            // Add popups
+            // Add a popup with title, artist names, and year on click
             map.on('click', 'publicArt', function (e) {
-                const coordinates = e.features[0].geometry.coordinates.slice();
-                const artistNames = e.features[0].properties.ArtistNames;
-
-                // Remove existing popups before opening a new one
-                if (popup) {
-                    popup.remove();
-                }
-
-                popup = new mapboxgl.Popup()
-                    .setLngLat(coordinates)
-                    .setHTML(`<strong>Artists:</strong> ${artistNames || 'N/A'}`)
+                const properties = e.features[0].properties;
+                new mapboxgl.Popup()
+                    .setLngLat(e.features[0].geometry.coordinates)
+                    .setHTML(`
+                        <strong>${properties.title_of_work}</strong><br>
+                        Artists: ${properties.ArtistNames || 'N/A'}<br>
+                        Year: ${properties.yearofinstallation || 'N/A'}
+                    `)
                     .addTo(map);
-            });
-
-            // Change the cursor to a pointer when the mouse is over the publicArt layer
-            map.on('mouseenter', 'publicArt', function () {
-                map.getCanvas().style.cursor = 'pointer';
-            });
-
-            // Reset the cursor when it leaves the publicArt layer
-            map.on('mouseleave', 'publicArt', function () {
-                map.getCanvas().style.cursor = '';
-            });
-
-            // Close the popup on map click
-            map.on('click', function () {
-                if (popup) {
-                    popup.remove();
-                }
             });
         });
     </script>
 </body>
-
 </html>
